# EpisodicDB

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: compare.py  datagen.py  queries.py  run_benchmark.py  runner.py  visualize.py
benchmarks/results/: 100000_episodes.json
benchmarks/results/phase1.5/: 100000_episodes.json  10000_episodes.json  50000_episodes.json
benchmarks/results/phase2a/: 10000_episodes.json  50000_episodes.json
episodicdb/: __init__.py  analytics.py  client.py  daemon.py  db.py  embeddings.py  temporal.py  writer.py
episodicdb/mcp/: __main__.py  server.py
episodicdb/planner/: __init__.py  cost_model.py  planner.py  selectivity.py  strategies.py
episodicdb/schema/: __init__.py
src/: __init__.py  analytics.py  db.py  schema.py
src/mcp/: __main__.py  server.py
src/schema/: episodes.sql
tests/: conftest.py  test_analytics.py  test_daemon.py  test_mcp_server.py  test_planner.py  test_temporal.py  test_writer.py
