[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "episodicdb"
version = "0.1.0"
description = "OLAP-based memory engine for AI agents"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/episodicdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
