[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "episodicdb"
version = "0.1.5"
description = "OLAP-based memory engine for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "KsPsD" },
]
keywords = ["ai", "agents", "memory", "olap", "duckdb", "mcp", "vector"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=1.2.0",
    "mcp[cli]>=1.0.0",
    "pytz>=2024.1",
]

[project.urls]
Homepage = "https://github.com/KsPsD/EpisodicDB"
Repository = "https://github.com/KsPsD/EpisodicDB"
Issues = "https://github.com/KsPsD/EpisodicDB/issues"

[project.scripts]
episodicdb-mcp = "episodicdb.mcp.__main__:main"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
voyage = ["voyageai>=0.3.0"]
ollama = ["httpx>=0.27.0"]
all = ["openai>=1.0.0", "voyageai>=0.3.0", "httpx>=0.27.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
